HELLODATA-3107 - more info on errors